<resources>
    <string name="app_name">NET2GRID</string>
    <string name="title_activity_connect">Connect to a WiFi network</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_network">Select a network</string>
    <string name="title_activity_meda">MedaActivity</string>
    <string name="name">default</string>
    <string name="power_usage_chart_title">current <b>Power</b> usage</string>
    <string name="energy_usage_chart_title">current <b>Energy</b> usage</string>
    <string name="chart_power_hour_chart"><b>Power</b> usage - current</string>
    <string name="chart_power_day_chart"><b>Power</b> usage - day</string>
    <string name="chart_gas_year_chart"><b>Gas</b> usage - year</string>
    <string name="chart_gas_day_chart"><b>Gas</b> usage - day</string>
    <string name="chart_gas_month_chart"><b>Gas</b> usage - month</string>
    <string name="error_message_no_meter_connected"><i>no meter connected</i></string>
    <string name="chart_energy_day_chart"><b>Energy</b> usage - day</string>
    <string name="chart_energy_month_chart"><b>Energy</b> usage - month</string>
    <string name="chart_energy_year_chart"><b>Energy</b> usage - year</string>
    <string name="wrong_network_title">Your device is currently on the network <b>%1$s</b> but your SmartBridge isn’t.</string>
    <string name="no_network_title">Your device is currently not on a WiFi network.</string>
    <string name="wrong_network_subtitle">Go to settings > WiFi to switch to the same network as your SmartBridge</string>
    <string name="chart_loading_data">Loading data...</string>
    <string name="connecting_with_smartbridge">Connecting to the SmartBridge</string>
    <string name="phase_name" translatable="false">R3.1</string>
    <string name="samba_phase_name" translatable="false">R6.0</string>
    <string name="welcome_toolbar">Ynni</string>
    <string name="welcome_title">Energy with Ynni</string>
    <string name="welcome_desc">Ever thought about how much energy your home is using right now\? Or how much it costs to wash clothes or dishes, cook dinner, refrigerate food or turn up the heat\? Ynni lets you understand energy and makes it fun. Open Ynni and discover a whole new world full of energy.</string>
    <string name="navigation_strap_account_exist">I already have an account</string>
    <string name="navigation_strap_new">New</string>
    <string name="register_data_title">Activate Ynni account</string>
    <string name="register_data_desc">It only takes a couple of minutes and then you can start enjoying the benefits of Ynni. Just type in your E-mail address.</string>
    <string name="register_data_email_hint">E-mail</string>
    <string name="register_data_serial_hint">MAC address</string>
    <string name="welcome_checkbox_confirm_normal_static_part">Yes, I agree to the</string>
    <string name="welcome_checkbox_confirm_link_static_part">Terms of use</string>
    <string name="welcome_checkbox_confirm_link_adress">http://energy-i.com/nutzungsbedingungen</string>
    <string name="passcode_screen_login_title">Use your pin code to log in</string>
    <string name="passcode_screen_input1">Choose a 5-digit pin to log in easily</string>
    <string name="passcode_screen_input2">Re-enter your 5-digit pin to confirm</string>
    <string name="passcode_error_not_whole_filled">Please enter the full 5 digit code</string>
    <string name="passcode_error_not_match">Incorrect pincode</string>
    <string name="next_step">Next</string>
    <string name="ready">Next</string>
    <string name="dashboard_title">Ynni</string>
    <string name="energy">Energy</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="badges">Awards</string>
    <string name="challenges">Competitions</string>
    <string name="settings">Settings</string>
    <string name="go_to_details_energy">Electricity</string>
    <string name="go_to_details_gas">Gas</string>
    <string name="circle_chart_second">Left</string>
    <string name="circle_chart_third">from</string>
    <string name="circle_chart_third_values">%1$d.- %2$s</string>
    <string name="circle_chart_empty_first">Set your</string>
    <string name="gas_circle_chart_empty_second">Gas budget</string>
    <string name="energy_circle_chart_empty_second">Energy budget</string>
    <string name="circle_chart_empty_third"></string>
    <string name="circle_chart_empty_meter_first">No data</string>
    <string name="circle_chart_empty_meter_second">is being received</string>
    <string name="circle_chart_empty_meter_third">from the meter</string>
    <string name="circle_chart_empty_profile_first">Please fill in</string>
    <string name="circle_chart_empty_profile_second">your profile</string>
    <string name="circle_chart_empty_profile_third"></string>
    <string name="latest_update">Latest update</string>
    <string name="latest_bundle_refresh">Days until the new month</string>
    <string name="no_latest_update">No data available yet</string>
    <string name="no_new_update">Not known yet</string>
    <string name="no_chalange_text">No challenges</string>
    <string name="tarif_text">Monthly energy budget settings</string>
    <string name="energy_data_title">Set your monthly electricity budget</string>
    <string name="energy_data_text">Ynni likes to keep precise track of your electricity usage, so you have more insights. Fill out your monthly payment and your annual energy usage. Ynni will calculate your budget.</string>
    <string name="energy_data_installment_hint">Monthly payment</string>
    <string name="energy_data_electricity_hint">Annual electricity usage</string>
    <string name="energy_data_gas_hint">Annual gas usage</string>
    <string name="energy_data_toolbar_title">Dashboard</string>
    <string name="energy_data_save_text">Save</string>
    <string name="consumption_details_title">Dashboard</string>
    <string name="history">Previous usage</string>
    <string name="compare">Compare usage</string>
    <string name="energy_consumption_title">Energy budget</string>
    <string name="consumption_details_gas">Gas budget</string>
    <string name="energy_consumption_history_title">Discover your previous electricity usage</string>
    <string name="gas_consumption_history_title">Discover your previous gas usage</string>
    <string name="compare_energy_consumption_history_title">Electricity usage comparison</string>
    <string name="compare_gas_consumption_history_title">Gas usage comparison</string>
    <string name="energy_toolbar_text">Electricity usage</string>
    <string name="gas_toolbar_text">Gas usage</string>
    <string name="compare_description_energy">Ynni compares your electricity usage with other people in the test group. Are you an energy monster or an energy saver\?</string>
    <string name="compare_description_gas">Ynni compares your gas usage with other people in the test group. Are you an energy monster or an energy saver\?</string>
    <string name="chart_popup_cost">Cost:</string>
    <string name="chart_popup_usage">Usage:</string>
    <string name="chart_popup_celcius">°C outdoors:</string>
    <string name="chart_popup_average">Average usage:</string>
    <string name="energy_serie_title">Usage</string>
    <string name="gas_chart_bar_legend">Gas</string>
    <string name="gas_chart_line_legend">Temperature</string>
    <string name="compare_serie_title">Average test group usage</string>
    <string name="gas_history_line_legend_title">Line DataSet</string>
    <string name="gas_history_bar_legend_title">Bar DataSet</string>
    <string name="history_chart_subtitle_hours">This is your usage for hours on %1$s</string>
    <string name="history_chart_subtitle_days">This is your usage from %1$s to %2$s</string>
    <string name="history_chart_subtitle_weeks">This is your usage from %1$s to %2$s</string>
    <string name="history_chart_subtitle_months">This is your usage from %1$s to %2$s</string>
    <string name="missing_data">Data is missing!</string>
    <string name="history_chart_hours">Hours</string>
    <string name="history_chart_days">Days</string>
    <string name="history_chart_weeks">Weeks</string>
    <string name="history_chart_months">Months</string>
    <string name="profile_title">Update the information you have shared with Ynni.</string>
    <string name="profile_email">E-mail address</string>
    <string name="profile_serial">MAC number</string>
    <string name="profile_installment">@string/energy_data_installment_hint</string>
    <string name="profile_annual_flow">@string/energy_data_electricity_hint</string>
    <string name="profile_annual_gas">N/A</string>
    <string name="profile_rate_flow">Electricity rate</string>
    <string name="profile_rate_gas">Gas rate</string>
    <string name="profile_updated_message">Profile has been updated</string>
    <string name="profile_field_wrong_format">Wrong format, please enter a number</string>
    <string name="annual_savings_text">Annual savings:</string>
    <string name="badges_title">Take a challenge and earn awards\nGood luck!</string>
    <string name="accept_challenge_button_text">I accept the challenge</string>
    <string name="close_challenge_button_text">Close</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="delete">Delete</string>
    <string name="setting_push_messages">Push messages</string>
    <string name="setting_push_messages_details">Ynni occasionally sends you messages and alerts. If you don’t want to receive them, turn them off here.</string>
    <string name="version_details">Current Ynni app version:</string>
    <string name="no_internet">No internet connection.</string>
    <string name="authorization_fail">Authorisation fail.</string>
    <string name="internal_server_error">Internal server error.</string>
    <string name="unknown_server_error">Unknown server error.</string>
    <string name="error_meda_connection_fail">MeDa station connection failed (error 110)</string>
    <string name="no_internet_title">Connection Status</string>
    <string name="no_internet_message">You have no internet connection.</string>
    <string name="no_internet_accept">OK</string>
    <string name="error_occurred">Error occurred, please try again later.</string>
    <string name="title_loading_dialog">Please wait…</string>
    <string name="days_string">days</string>
    <string name="accept_chalange">Accept challenge</string>
    <string name="temp_symbol">°C</string>
    <string name="message_m001_title">Help us to help you:</string>
    <string name="message_m001_body">Just input into your Ynni App the amount you pay your energy supplier each month. The App can then give you even better insight into your energy use.</string>
    <string name="message_m001r_title">Help us to help you:</string>
    <string name="message_m001r_body">Just input into your Ynni App the amount of direct debit you pay each month. The App can then give you even better insight into your energy use.</string>
    <string name="message_m006_title">You’ve completed your profile!</string>
    <string name="meda_open_wifi_settings_step_first">1. Open WiFi Settings</string>
    <string name="meda_open_wifi_settings_step_second">2. On the back of the SmartBridge you’ll find information needed to connect</string>
    <string name="meda_open_wifi_settings_step_third">3. The SSID is <b>sbwf-</b> plus the last four characters of your MAC address\n <i>- This is always uppercase -</i></string>
    <string name="meda_open_wifi_settings_step_fourth">4. The password is sbwf- plus the SmartBridge shortcode\n <i>- This is case-sensitive -</i></string>
    <string name="meda_open_wifi_settings_step_fifth">5. Return to this app.</string>
</resources>