<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#213b4c"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_intro_connection_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_cross_white"/>

            <TextView
                android:id="@+id/fragment_connect_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/title_intro_connect_network"/>

        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/onboarding_qr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/meda_open_wifi_settings_step_first"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/meda_open_wifi_settings_step_second"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/meda_open_wifi_settings_step_third"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/meda_open_wifi_settings_step_fourth"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.Helvetica.Light"
                android:text="@string/meda_open_wifi_settings_step_fifth"/>

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_connect_goto_wifi_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1a2d3b"
        android:layout_gravity="bottom"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.Helvetica.Light"
            android:textStyle="normal"
            android:text="@string/goto_wifi_settings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:src="@drawable/icon_back_white" />

    </FrameLayout>

</FrameLayout>